--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
     <!-- Seção Hero - Primeira seção visível -->
     <section id="inicio" class="hero">
       <div class="hero-content">
-        <h2>Olá, eu sou <span class="destaque">Gabriel</span></h2> <!-- Texto com destaque no nome -->
-        <p>Estudante e entusiasta de tecnologia</p> <!-- Subtítulo -->
-        <div class="social-links"> <!-- Links para redes sociais -->
+        <h2>Olá, eu sou <span class="destaque">Gabriel</span></h2> 
+        <p>Estudante e entusiasta de tecnologia</p> 
+        <div class="social-links">
           <a href="https://github.com/GabrielP1909" target="_blank">GitHub</a>
           <a href="#">LinkedIn</a>
         </div>
-        <a href="#projects" class="btn btn-primary">Ver Projetos</a> <!-- Botão CTA -->
+        <a href="#projects" class="btn btn-primary">Ver Projetos</a> 
       </div>
     </section>
 
     <!-- Seção Sobre Mim -->
     <section id="sobre" class="section">
       <div class="container">
-        <h2 class="section-title">Sobre Mim</h2> <!-- Título da seção -->
+        <h2 class="section-title">Sobre Mim</h2> 
         <div class="about-box">
   <p>Sou Gabriel, estudante de 16 anos apaixonado por tecnologia. Atualmente curso desenvolvimento de sistemas no IFSul e no Colégio São Lucas.</p>
   <p>Minha jornada na programação começou com Lua aos 11 anos criando scripts para jogos em uma plataforma.
@@ -61,7 +61,7 @@
     <!-- Seção Habilidades com barras de progresso -->
    <section id="skills" class="section">
   <div class="container">
-    <h2 class="section-title">Conhecimento</h2>  <!-- Título adicionado -->
+    <h2 class="section-title">Conhecimento</h2>  
     <div class="skills-grid">
   <div class="skill">
     <h3>HTML</h3>
@@ -106,7 +106,7 @@
     <section id="projects" class="section">
       <div class="container">
         <h2 class="section-title">Projetos</h2>
-        <div class="project-card"> <!-- Card de projeto -->
+        <div class="project-card">
           <h3>SiteAnalyzer PRO</h3>
           <p>Ferramenta web para análise técnica de websites.</p>
           <a href="https://github.com/GabrielP1909/SiteAnalyzer-PRO" target="_blank" class="btn btn-secondary">Ver Projeto</a> <!-- Botão secundário -->
@@ -118,11 +118,11 @@
     <section id="contato" class="section">
       <div class="container">
         <h2 class="section-title">Contato</h2>
-        <form class="contact-form"> <!-- Formulário funcional -->
-          <input type="text" placeholder="Seu nome" required> <!-- Campo obrigatório -->
+        <form class="contact-form"> 
+          <input type="text" placeholder="Seu nome" required>
           <input type="email" placeholder="Seu email" required>
           <textarea placeholder="Sua mensagem" required></textarea>
-          <button type="submit" class="btn btn-primary">Enviar</button> <!-- Botão de submit -->
+          <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
     </section>
@@ -130,7 +130,7 @@
 
   <!-- Rodapé simples -->
   <footer>
-    <p>&copy; 2025 Gabriel. Todos os direitos reservados.</p> <!-- Copyright -->
+    <p>&copy; 2025 Gabriel. Todos os direitos reservados.</p>
   </footer>
 
   <!-- Scripts JavaScript -->
